fix: burger menu correctly opens without layout shifts now
Before, it was quite bad. I managed to do avoid making a clone of the
sidebar by just positioning it as absolute and making the main-content
element occupy the second part of the grid.

--- a/src/css/globals.css
+++ b/src/css/globals.css
@@ -267,7 +267,7 @@ pre code {
   display: grid;
   grid-template-columns: var(--sidebar-width--height) 1fr;
   gap: var(--spacing-m);
-  padding: var(--spacing-m);
+  padding: var(--spacing-m) 0 var(--spacing-m) var(--spacing-m);
   height: 100vh;
   transition: grid-template-rows var(--trs-in);
 }
