--- a/src/css/sidebar.css
+++ b/src/css/sidebar.css
@@ -5,6 +5,7 @@
   border-radius: var(--border-radius);
   color: var(--primary-600);
   transition:
+    height var(--trs-in),
     color var(--trs-s),
     background-color var(--trs-theme);
 }
@@ -134,6 +135,11 @@
 @media screen and (max-width: 900px) {
   .sidebar {
     text-align: center;
+    padding: var(--spacing-m);
+    position: absolute;
+    width: calc(100% - var(--spacing-m) * 2);
+    height: var(--sidebar-width--height);
+    z-index: 10;
 
     & > *:not(h1) {
       display: none;
@@ -147,14 +153,19 @@
   .main-grid {
     --sidebar-width--height: 2.25lh;
     grid-template-columns: unset;
-    grid-template-rows: var(--sidebar-width--height) 1fr;
+    grid-template-rows: 2.25lh 1fr;
   }
 
   .sidebar-button {
     display: flex;
+    z-index: 11;
   }
 
   .platform-docs {
     width: unset;
+  }
+
+  .main-content {
+    grid-row: 2;
   }
 }
